--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,8 @@
             "tsConfig": "tsconfig.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/favicon.ico",
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -58,8 +60,8 @@
                 }
               ],
               "outputHashing": "all",
-              "optimization": true, 
-              "extractLicenses": true, 
+              "optimization": true,
+              "extractLicenses": true,
               "sourceMap": false
             },
             "development": {
