--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@angular-devkit/build-angular": "^19.2.5",
     "@angular/cli": "^19.2.5",
     "@angular/compiler-cli": "^19.2.0",
+    "@angular/localize": "^19.2.15",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^18.18.0",
     "autoprefixer": "^10.4.14",
     "jasmine-core": "~5.6.0",
