--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": ["jasmine", "node"],
+    "types": ["jasmine", "node", "@angular/localize"],
     "target": "ES2022",
     "module": "ESNext",
     "moduleResolution": "node",
