update registry user

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ secrets.GHCR_USER }}/portfolio-2025-front
+  IMAGE_NAME: ${{ secrets.DEPLOY_REGISTRY_USER }}/portfolio-2025-front
 
 jobs:
   build:
