--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.2.3",
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/platform-server": "^19.2.0",
-    "@angular/router": "^19.2.0",
+    "@angular/common": "^19.2.17",
+    "@angular/compiler": "^19.2.17",
+    "@angular/core": "^19.2.17",
+    "@angular/forms": "^19.2.17",
+    "@angular/platform-browser": "^19.2.17",
+    "@angular/platform-browser-dynamic": "^19.2.17",
+    "@angular/platform-server": "^19.2.17",
+    "@angular/router": "^19.2.17",
     "@angular/ssr": "^19.2.5",
     "express": "^4.18.2",
     "ngx-extended-pdf-viewer": "^23.0.0-alpha.6",
@@ -30,13 +30,17 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.5",
     "@angular/cli": "^19.2.5",
-    "@angular/compiler-cli": "^19.2.0",
+    "@angular/compiler-cli": "^19.2.17",
     "@angular/localize": "^19.2.15",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^18.18.0",
     "autoprefixer": "^10.4.14",
+    "baseline-browser-mapping": "^2.9.14",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -44,6 +48,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.21",
+    "prettier": "^3.8.0",
     "tailwindcss": "^3.3.0",
     "typescript": "~5.7.2"
   }
