--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             "tsConfig": "tsconfig.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
+              "src/assets/favicon.ico",
               "src/assets",
               {
                 "glob": "**/*",
