--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "CI=true ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:portfolio-app": "node dist/portfolio-app/server/fr/server.mjs"
+    "serve:ssr:portfolio-app": "node dist/portfolio-app/server/fr/server.mjs",
+    "extract-i18n": "ng extract-i18n --output-path src/locale --format xlf"
   },
   "private": true,
   "dependencies": {
